overflow x fixed

--- a/PortfolioWebsite/src/app/app.component.css
+++ b/PortfolioWebsite/src/app/app.component.css
@@ -12,6 +12,7 @@
     transition: all 0.5s;
 }
 
+/* Nav */
 .light nav {
     background-color: rgba(0, 0, 0, 0.2); 
 }
@@ -21,24 +22,26 @@
     color: white;
 }
 
+/* about */
 .light .heroTextImg{
     border: 4px solid black;
-}
-
-.light .header{
-    background-color: rgba(33,37,41,255);
-    color: white;
-}
-
-.light footer{
-    background-color: rgba(0, 0, 0, 0.2);
 }
 
 .light .bg-gray{
     background-color: rgba(0, 0, 0, 0.2);
 }
 
-.light .bi{
+/* cards*/
+.light .header{
+    background-color: rgba(33,37,41,255);
+    color: white;
+}
+/* footer */
+.light footer{
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.light footer .bi{
     color: black;
 }
 
@@ -49,7 +52,7 @@
     color: white;
     transition: all 0.5s;
 }
-
+/* Nav */
 .dark nav {
     background-color: rgba(255, 255, 255, 0.2);
 }
@@ -62,7 +65,7 @@
     background-color: white;
     color: black;
 }
-
+/* about */
 .dark .heroTextImg{
     border: 4px solid rgb(255, 255, 255);
 }
@@ -71,7 +74,7 @@
     background-color: rgba(255, 255, 255, 0.2);
     color: white;
 }
-
+/* cards */
 .dark .header{
     background-color: rgba(204,204,204,255);
     color: black;
@@ -80,7 +83,7 @@
 .dark .card {
     color: black;
 }
-
+/* footer */
 .dark footer {
     background-color: rgba(255, 255, 255, 0.2);
     color: white;
